--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -48,7 +48,9 @@
             background-color: white;
             height: 60px;
             display: flex;
+            width: auto;
             padding: 10px ;
+            margin-top: 0px;
             align-items: center;
             box-shadow: 0 4px 2px -2px #c5c6c7;
         }
