--- a/templates/a.html
+++ b/templates/a.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billing</title>
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/fontawesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/sidebar.css">
-    <!-- js -->
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/fontawesome.min.js"></script>
-    <script src="../js/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    
     <style>
         .img-user{
             border-radius: 50%;
@@ -232,13 +227,17 @@
                 </div>
             </div>
         </div>
-            <script>
-                let sidebarToggle = document.querySelector(".sidebarToggle");
-                sidebarToggle.addEventListener("click", function(){
-                    document.querySelector("body").classList.toggle("active");
-                    document.getElementById("sidebarToggle").classList.toggle("active");
-                })
-            </script>
     </div>   
 </body>
+    <!-- js -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/fontawesome.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script>
+        let sidebarToggle = document.querySelector(".sidebarToggle");
+        sidebarToggle.addEventListener("click", function(){
+            document.querySelector("body").classList.toggle("active");
+            document.getElementById("sidebarToggle").classList.toggle("active");
+        })
+    </script>
 </html>
