--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -5,35 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee</title>
+    <title>Accounts</title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/measurement.css'%}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/sidebar.css'%}">
-    <style>
-        .myfont{
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: 100;
-            text-align: center;
-        }
-        .card {
-        margin: 0 auto; 
-        float: none; 
-        margin-bottom: 10px;
-        max-width: 60rem ;
-        }
-        .employee_photo{
-            box-shadow:  5px 10px 18px grey;
-            border-radius: 50%;
-            margin-left: 3%;
-            width: 250px;
-            height: 250px;
-        }
-        .card-body{
-            margin-top: 50px;
-        }
-    </style>
+    
 </head>
 
 <body>
@@ -60,7 +38,7 @@
                 </div>
                 <ul class="navigation-list">
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="dashboard">
+                        <a class="navigation-link" href="/">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-tachometer"></i>
@@ -71,8 +49,8 @@
                             </div>
                         </a>
                     </li>
-                    <li class="navigation-list-item active">
-                        <a class="navigation-link" href="#">
+                    <li class="navigation-list-item">
+                        <a class="navigation-link" href="employee">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-users"></i>
@@ -96,7 +74,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="navigation-list-item ">
+                    <li class="navigation-list-item active">
                         <a class="navigation-link" href="account">
                             <div class="row">
                                 <div class="col-2">
@@ -152,50 +130,40 @@
                         </li>
                 </div>
             </header>
-            <div class="container-fluid">
-                <!-- <div id="slide" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="/media/home.jpg" alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/media/login.jpg" alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="/media/home.jpg" alt="Third slide">
-                      </div>
+            <div class="container-fluid search_box">
+                <form class="form-inline">
+                    <div class="row">
+                        <div class="col-10"><input class="form-control " type="search" placeholder="Search" aria-label="Search"></div>
+                        <div class="col-2"><button class="btn btn-outline-success " type="submit">Search</button></div>
                     </div>
-                    <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div> -->
-                <div class="card text-light bg-dark mb-3 row" >
-                    <div class="card-header">
-                        <h2 class="myfont">Employee Detail</h2>
+                    <div class="row">
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th class="th">#</th>
+                                    <th class="th">Name</th>
+                                    <th class="th">Total</th>
+                                    <th class="th">Advance</th>
+                                    <th class="th">Remaining</th>
+                                    <style>
+                                        .th{
+                                            text-align: center;
+                                        }
+                                    </style>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td><a href="#"><label for="name" name="name"></label></a></td>
+                                    <td><label for="total" name="total"></label></td>
+                                    <td><label for="advance" name="advance"></label></td>
+                                    <td><label for="remaning" name="remaining"></label></td>
+                                  </tr>
+                            </tbody>
+                        </table>
                     </div>
-                        <div class="card-body d-flex mx-auto row">
-                            <div class="col-5 photo">
-                                <img src="/media/login.jpg" alt="No_Image_found" class="employee_photo">
-                            </div>
-                            <div class="col-7 employee_info">
-                                <p class="employee_label">Name:</p><label for="name" name="name"></label>
-                                <p class="employee_label">Address:</p><label for="address" name="address"></label>
-                                <p class="employee_label">E-mail:</p><label for="email" name="email"></label>
-                                <p class="employee_label">Phone-number:</p><label for="number" name="number"></label>
-                            </div>
-                        </div>
-                        <div class="row mb-3 mx-1">
-                            <p class="employee_label">No. of Order Count:</p><label for="ordernumber" name="order_count"></label>
-                            
-                                <button class="btn btn-primary mb-1">Send Measurement</button>
-                                <button class="btn btn-primary">Email/Message</button>
-                        </div>
-                </div>
+                  </form>
             </div>
         </div>          
     </div>
