--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+{% load  static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
@@ -100,7 +101,7 @@
             </div>
 
             <div class="col-5 d-flex">
-                <img src="/image/home.jpg" alt="No_Image_found" class="welcome_img">
+                <img src="/media/home.jpg" alt="No_Image_found" class="welcome_img">
             </div>
         </div>
     </div>
@@ -115,7 +116,7 @@
                     </div>
             </div>
             <div class="col-8 ">
-                <img src="/image/login.jpg" alt="No_Image_found" class="login_img">
+                <img src="/media/login.jpg" alt="No_Image_found" class="login_img">
             </div>
         </div>
     </div>
