measurement html changes, employee urls shift

--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -21,7 +21,7 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo-container">
                     <div class="logo-container">
-                        <img class="logo-sidebar" src="assets/img/logo.png" />
+                        <img class="logo-sidebar" src="/media/dress.jpg" />
                     </div>
                     <div class="brand-name-container">
                         <p class="brand-name">
@@ -169,7 +169,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-6 mb-3">
-                                        <label for="Orderdate">Orderdate</label>
+                                        <label for="Orderdate">Employee</label>
                                         <input type="date" class="form-control" id="order-date" required>
                                         <div class="valid-feedback">
                                             Looks good!
