employee dashboard html changes

--- a/templates/accounts.html
+++ b/templates/accounts.html
@@ -38,7 +38,7 @@
                 </div>
                 <ul class="navigation-list">
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="/">
+                        <a class="navigation-link" href="dashboard">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-tachometer"></i>
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li class="navigation-list-item active">
-                        <a class="navigation-link" href="account">
+                        <a class="navigation-link" href="#">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-calculator"></i>
