--- a/templates/employee.html
+++ b/templates/employee.html
@@ -153,6 +153,15 @@
                 </div>
             </header>
             <div class="container-fluid">
+                <form action="#" method="POST"> 
+                    <div class="d-flex mx-auto m-2">
+                        <div class="g-5"> <button class="btn btn-primary" name="register">Register</button></div>
+                        <div class="g-5"> <button class="btn btn-primary" name="remove">Remove</button></div>
+                    </div>
+
+                </form>
+            </div>
+            <div class="container-fluid">
                 <!-- <div id="slide" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -197,6 +206,7 @@
                         </div>
                 </div>
             </div>
+           
         </div>          
     </div>
     
