--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,19 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer</title>
+    <title>Accounts</title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/measurement.css'%}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/sidebar.css'%}">
-    <style>
-    .customer-photo{
-    border-radius: 50%;
-    max-height: 50px;
-    width: 50px;
-}
-    </style>
+    
 </head>
 
 <body>
@@ -32,7 +26,6 @@
                     <div class="brand-name-container">
                         <p class="brand-name">
                             Collection & Creation<br>
-                            
                         </p>
                     </div>
                 </div>
@@ -44,8 +37,8 @@
                     </span>
                 </div>
                 <ul class="navigation-list">
-                    <li class="navigation-list-item">
-                        <a class="navigation-link" href="dashboard">
+                    <li class="navigation-list-item active">
+                        <a class="navigation-link" href="#">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-tachometer"></i>
@@ -81,7 +74,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="navigation-list-item">
+                    <li class="navigation-list-item ">
                         <a class="navigation-link" href="account">
                             <div class="row">
                                 <div class="col-2">
@@ -93,7 +86,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="navigation-list-item active">
+                    <li class="navigation-list-item">
                         <a class="navigation-link" href="customer">
                             <div class="row">
                                 <div class="col-2">
@@ -148,19 +141,13 @@
                             <thead class="thead-dark">
                                 <tr>
                                     <th class="th">#</th>
-                                    <th class="th">Photo</th>
                                     <th class="th">Name</th>
-                                    <th class="th">Order-date</th>
-                                    <th class="th">Number</th>
-                                    <th class="th">Email</th>
+                                    <th class="th">Total</th>
                                     <th class="th">Advance</th>
                                     <th class="th">Remaining</th>
-                                    <th class="th">Total</th>
-
-
                                     <style>
                                         .th{
-                                            text-align: left;
+                                            text-align: center;
                                         }
                                     </style>
                                 </tr>
@@ -168,11 +155,7 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td><img src="/media/login.jpg" alt="" class="customer-photo" name="photo"></td>
                                     <td><a href="#"><label for="name" name="name"></label></a></td>
-                                    <td><label for="order-date" name="order-date"></label></td>
-                                    <td><label for="number" name="number"></label></td>
-                                    <td><label for="emil" name="email"></label></td>
                                     <td><label for="total" name="total"></label></td>
                                     <td><label for="advance" name="advance"></label></td>
                                     <td><label for="remaning" name="remaining"></label></td>
