--- a/templates/signup.html
+++ b/templates/signup.html
@@ -84,7 +84,16 @@
                             <form class="row">
                                 <section class="col-8">
                                     <div class="form-row">
+                                        <input type="Name" placeholder="Robbin hood pandey" class="form-control rounded-pill my-3 p-2">
+                                    </div>
+                                    <div class="form-row">
+                                        <input type="Address" placeholder="Kathmandu" class="form-control rounded-pill my-3 p-2">
+                                    </div>
+                                    <div class="form-row">
                                         <input type="email" placeholder="xyz@gmail.com " class="form-control rounded-pill my-3 p-2">
+                                    </div>
+                                    <div class="form-row">
+                                        <input type="number" placeholder="984155555" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
                                         <input type="password" placeholder="*******" class="form-control rounded-pill my-3 p-2">
@@ -93,8 +102,8 @@
                                 <section class="col-4"></section>
                                 <section>
                                     <a href="#">Forgot Password?</a>
-                                    <p style="margin-left:2px;">Don't have an Account?
-                                    <a href="signup.html">  Register here</a></p>
+                                    <p style="margin-left:2px">Already have an Account?
+                                    <a href="signup.html">  Login here</a></p>
                                 </section>
                             </form>
                 </section>
