--- a/templates/home.html
+++ b/templates/home.html
@@ -57,14 +57,14 @@
             <div class="col-4 d-flex">
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="#" class="nav-link link-secondary " aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link link-dark">About us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link link-dark">Service</a></li>
+                    <li class="nav-item"><a href="aboutus" class="nav-link link-dark">About us</a></li>
+                    <li class="nav-item"><a href="service" class="nav-link link-dark">Service</a></li>
                 </ul>
             </div>
             <div class="col-3 d-flex flex-row-reverse">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a href="#signup">
+                        <a href="signup">
                             <buttton class="btn btn-outline-dark">Sign up</buttton>
                         </a>
                     </li>
