--- a/templates/home.html
+++ b/templates/home.html
@@ -90,6 +90,7 @@
                                         <input type="password" placeholder="*******" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                 </section>
+                                <button class="btn btn-primary">Login</button>
                                 <section class="col-4"></section>
                                 <section>
                                     <a href="#">Forgot Password?</a>
