--- a/templates/home.html
+++ b/templates/home.html
@@ -44,82 +44,102 @@
             width: 800px;
             max-height: 100vh;
         }
+
+
     </style>
+    <script>
+function myFunction() {
+  alert("Hello! I am an alert box!");
+}
+
+
+    </script>
+
 </head>
 <body>
-    <header class="container-fluid header_container">
-        <div class="row header">
-            <div class="col-5 d-flex">
-                <a href="/" class="logo align-items-center mb-3 text-dark text-decoration-none " style="margin-right: auto;">
-                    <span class="fs-4">Tailor Management System</span>
-                </a>
-            </div>
-            <div class="col-4 d-flex">
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link link-secondary " aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="aboutus" class="nav-link link-dark">About us</a></li>
-                    <li class="nav-item"><a href="service" class="nav-link link-dark">Service</a></li>
-                </ul>
-            </div>
-            <div class="col-3 d-flex flex-row-reverse">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a href="signup">
-                            <buttton class="btn btn-outline-dark">Sign up</buttton>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<header class="container-fluid header_container">
+    <div class="row header">
+        <div class="col-5 d-flex">
+            <a href="/" class="logo align-items-center mb-3 text-dark text-decoration-none "
+               style="margin-right: auto;">
+                <span class="fs-4">Tailor Management System</span>
+            </a>
         </div>
-    </header>
-
-    <div class="container-fluid divider"></div>
-
-    <div class="container-fluid main-container">
-        <div class="row main-row">
-            <div class="col-7">
-                <section class="login_form col-10 ">
-                    <h1 class="font-weight-bold py-3">Tailor Management System</h1>
-                            <h4>Sign into your account</h4>
-                            <form class="row">
-                                <section class="col-8">
-                                    <div class="form-row">
-                                        <input type="email" placeholder="xyz@gmail.com " class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="password" placeholder="*******" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                </section>
-                                <button class="btn btn-primary">Login</button>
-                                <section class="col-4"></section>
-                                <section>
-                                    <a href="#">Forgot Password?</a>
-                                    <p style="margin-left:2px;">Don't have an Account?
-                                    <a href="signup.html">  Register here</a></p>
-                                </section>
-                            </form>
-                </section>
-            </div>
-
-            <div class="col-5 d-flex">
-                <img src="/media/home.jpg" alt="No_Image_found" class="welcome_img">
-            </div>
+        <div class="col-4 d-flex">
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link link-secondary " aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="aboutus" class="nav-link link-dark">About us</a></li>
+                <li class="nav-item"><a href="service" class="nav-link link-dark">Service</a></li>
+            </ul>
+        </div>
+        <div class="col-3 d-flex flex-row-reverse">
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a href="signup">
+                        <buttton class="btn btn-outline-dark">Sign up</buttton>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
+</header>
 
-    <div class="container-fluid divider"></div>
+<div class="container-fluid divider"></div>
 
-    <div class="container-fluid login" id="login">
-        <div class="row">
-            <div class="col-4 login_form">
-                    <div class="form-row">
+<div class="container-fluid main-container">
+    <div class="row main-row">
+        <div class="col-7">
+            <section class="login_form col-10 ">
+                <h1 class="font-weight-bold py-3">Tailor Management System</h1>
+                <h4>Sign into your account</h4>
 
-                    </div>
-            </div>
-            <div class="col-8 ">
-                <!-- <img src="/media/login.jpg" alt="No_Image_found" class="login_img"> -->
-            </div>
+                <form class="row" method="post" action="login">
+                    {% csrf_token %}
+                    <section class="col-8">
+                        <div class="form-row">
+                            <input type="email" name="email" placeholder="xyz@gmail.com "
+                                   class="form-control rounded-pill my-3 p-2">
+                        </div>
+                        <div class="form-row">
+                            <input type="password" name="password" placeholder="*******"
+                                   class="form-control rounded-pill my-3 p-2">
+                        </div>
+                    </section>
+                    {% if messages %}
+                    {% for message in messages %}
+                    <h3 style="color:red">{{ message }}</h3>
+                    {% endfor %}
+                    {% endif %}
+                    <button class="btn btn-primary">Login</button>
+                    <section class="col-4"></section>
+                    <section>
+                        <a href="#">Forgot Password?</a>
+                        <p style="margin-left:2px;">Don't have an Account?
+                            <a href="signup.html"> Register here</a></p>
+                    </section>
+                </form>
+            </section>
+        </div>
+
+        <div class="col-5 d-flex">
+            <img src="/media/home.jpg" alt="No_Image_found" class="welcome_img">
         </div>
     </div>
+</div>
+
+<div class="container-fluid divider"></div>
+
+<div class="container-fluid login" id="login">
+    <div class="row">
+        <div class="col-4 login_form">
+            <div class="form-row">
+
+            </div>
+        </div>
+        <div class="col-8 ">
+            <!-- <img src="/media/login.jpg" alt="No_Image_found" class="login_img"> -->
+        </div>
+    </div>
+</div>
 </body>
 </html>
