--- a/templates/navside.html
+++ b/templates/navside.html
@@ -129,7 +129,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link link-dark">
+                            <a href="logout" class="nav-link link-dark">
                                 <i class="fa fa-sign-out"></i></a>
                             </a>
                         </li>
